--- a/TinkoffChat/Presentation Layer/Storyboard/Profile.storyboard
+++ b/TinkoffChat/Presentation Layer/Storyboard/Profile.storyboard
@@ -169,43 +169,41 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Tvy-83-RP4">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="u3V-2T-prC">
+                                    <searchBar contentMode="redraw" placeholder="Search by keywords" translatesAutoresizingMaskIntoConstraints="NO" id="u3V-2T-prC">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                     </searchBar>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="e1B-tM-yQR">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1B-tM-yQR">
                                         <rect key="frame" x="0.0" y="56" width="375" height="591"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0e9-Jg-zIL">
-                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="itemSize" width="113" height="98"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YZD-re-8Ry">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="internetImageCell" id="YZD-re-8Ry" customClass="ImageCollectionViewCell" customModule="TinkoffChat" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="113" height="98"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="113" height="98"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Cd-JS-Cp2">
+                                                            <rect key="frame" x="0.0" y="0.0" width="113" height="98"/>
+                                                        </imageView>
+                                                    </subviews>
                                                 </view>
-                                            </collectionViewCell>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="w3H-u2-72l">
-                                                <rect key="frame" x="65" y="0.0" width="50" height="50"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </view>
-                                            </collectionViewCell>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nlG-I8-dcq">
-                                                <rect key="frame" x="130" y="0.0" width="50" height="50"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="7Cd-JS-Cp2" firstAttribute="leading" secondItem="YZD-re-8Ry" secondAttribute="leading" id="CfH-gx-2vl"/>
+                                                    <constraint firstAttribute="trailing" secondItem="7Cd-JS-Cp2" secondAttribute="trailing" id="DJE-4a-QGB"/>
+                                                    <constraint firstAttribute="bottom" secondItem="7Cd-JS-Cp2" secondAttribute="bottom" id="amK-9f-NTN"/>
+                                                    <constraint firstItem="7Cd-JS-Cp2" firstAttribute="top" secondItem="YZD-re-8Ry" secondAttribute="top" id="fwG-G5-Yq6"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="imageView" destination="7Cd-JS-Cp2" id="6BS-m6-YYW"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -221,10 +219,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yBB-eI-maq"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="e1B-tM-yQR" id="Yff-Np-muA"/>
+                        <outlet property="searchBar" destination="u3V-2T-prC" id="vvT-rO-A5K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qgJ-Da-LLW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3553" y="-394"/>
+            <point key="canvasLocation" x="3552.8000000000002" y="-394.45277361319341"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="myA-yj-Zfl">
